# ASIL

./: .env.example  .gitignore  .pre-commit-hooks.yaml  AGENTS.md  CLAUDE.md  HANDOFF.md  Makefile  PLAN.md  README.md  asil_guide.md  docker-compose.yml  i-want-to-build-reactive-platypus.md  pyproject.toml
.claude/: settings.json
.claude/commands/: check-tier.md  eval.md  phase.md
.claude/skills/: asil-confidence.md  asil-eval-corpus.md  asil-graph-schema.md  asil-llm-call.md  asil-mcp-tool.md  asil-memory.md  asil-phase-gate.md  asil-positioning.md  asil-runtime-events.md  asil-temporal-causality.md
.github/workflows/: asil-bootstrap.yml  asil-report.yml  asil-scan.yml  ci.yml  gh-pages.yml
apps/api/: pyproject.toml
apps/api/asil_api/: __init__.py  main.py  mcp_server.py  mcp_tools.py
apps/cli/: pyproject.toml
apps/cli/asil_cli/: __init__.py  main.py
apps/web/: .gitignore  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
apps/web/public/snapshot/: health.json  incident_ids.json  incidents.json
apps/web/public/snapshot/dashboard/: cost.json  memory.json  stats.json
apps/web/public/snapshot/mcp/: asil.ask.json  asil.drift_check.json  asil.find_causes.json  asil.find_causes__INC-2025-11-22-config-oom.json  asil.find_causes__INC-2026-01-15-tls-gateway-outage.json  asil.find_causes__INC-2026-02-08-db-pool-exhaustion.json  asil.find_causes__INC-2026-03-19-dns-misconfig-checkout.json  asil.find_causes__INC-2026-04-12-payments-cascade.json  asil.recall.json  asil.replay_incident.json  asil.replay_incident__INC-2025-11-22-config-oom.json  asil.replay_incident__INC-2026-01-15-tls-gateway-outage.json  asil.replay_incident__INC-2026-02-08-db-pool-exhaustion.json  asil.replay_incident__INC-2026-03-19-dns-misconfig-checkout.json  asil.replay_incident__INC-2026-04-12-payments-cascade.json  tools.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/ask/: page.tsx
apps/web/src/app/causality/: page.tsx
apps/web/src/app/cost/: page.tsx
apps/web/src/app/drift/: page.tsx
apps/web/src/app/health/: page.tsx
apps/web/src/app/incidents/: page.tsx
apps/web/src/app/incidents/[id]/: IncidentReplay.tsx  page.tsx
apps/web/src/app/mcp/: page.tsx
apps/web/src/app/memory/: page.tsx
apps/web/src/components/: Card.tsx  CausalFlow.tsx  ConfidenceBar.tsx  Sidebar.tsx
apps/web/src/lib/: api.ts
docs/: asil-in-five-minutes.md  asil-report.md  asil.json  asil.sarif  inspecting-the-graph.md  measuring-savings.md  medium-blog-post.md  phase-0-testing.md  phase-1-testing.md  why-asil.md
docs/assets/: README.md  asil-demo.cast
infrastructure/docker/: prometheus.yml
research/: benchmarks.md  design-decisions.md  papers.md  savings-benchmark.yaml
research/postmortems/: 2025-08-14-payments-redis-cascade.yaml  2025-11-22-config-oom.yaml  2026-01-15-tls-gateway-outage.yaml  2026-02-08-db-pool-exhaustion.yaml  2026-03-19-dns-misconfig-checkout.yaml
scripts/: record_demo.sh  snapshot_dashboard.py
tests/fixtures/: sample_events.yaml
tests/integration/: conftest.py  test_episodic_store.py  test_graph_builder.py  test_live_adapters.py  test_postmortem_ingest.py  test_temporal_linker.py  test_vector_store.py
tests/unit/: test_adapters.py  test_call_resolver.py  test_claude_code_ingester.py  test_confidence.py  test_cursor_and_generic_ingesters.py  test_drift.py  test_episodic_dedupe.py  test_eval_recall.py  test_external_adapters.py  test_fix_pipeline.py  test_hybrid_retriever.py  test_identity.py  test_live_adapters.py  test_llm_router.py  test_mcp_tools.py  test_postgres_ledger.py  test_postmortem.py  test_replay.py  test_repo_cloner.py  test_scan.py  test_scorer.py  test_state_diff.py  test_teams.py  test_temporal_linker.py  test_tool_capture_and_deletion.py  test_treesitter_parser_javascript.py  test_treesitter_parser_multilang.py  test_treesitter_parser_python.py  test_treesitter_parser_tsx.py  test_treesitter_parser_typescript.py  test_verifier.py
