[project]
name = "asil"
version = "0.0.1"
description = "Engineering Intelligence Infrastructure — persistent, temporal, causal understanding of software systems."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Raksith Lochab", email = "rkstlohchab@gmail.com" }]

dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [
    "apps/api",
    "apps/cli",
    "apps/worker",
    "packages/asil_core",
    "packages/asil_ingest",
    "packages/asil_memory",
    "packages/asil_temporal",
    "packages/asil_replay",
    "packages/asil_drift",
    "packages/asil_reasoning",
    "packages/asil_infra",
    "packages/asil_eval",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF", "ASYNC", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
