[project]
name = "asil-api"
version = "0.0.1"
description = "ASIL API gateway — FastAPI + MCP server."
requires-python = ">=3.12"
dependencies = [
    "asil-core",
    "asil-memory",
    "asil-reasoning",
    "asil-temporal",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["asil_api"]

[tool.uv.sources]
asil-core = { workspace = true }
asil-memory = { workspace = true }
asil-reasoning = { workspace = true }
asil-temporal = { workspace = true }
