[project]
name = "asil-cli"
version = "0.0.1"
description = "ASIL CLI — primary UX during Phases 1–5."
requires-python = ">=3.12"
dependencies = [
    "asil-core",
    "asil-eval",
    "asil-ingest",
    "asil-memory",
    "asil-reasoning",
    "typer>=0.12.0",
    "rich>=13.9.0",
    "httpx>=0.27.0",
]

[project.scripts]
asil = "asil_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["asil_cli"]

[tool.uv.sources]
asil-core = { workspace = true }
asil-eval = { workspace = true }
asil-ingest = { workspace = true }
asil-memory = { workspace = true }
asil-reasoning = { workspace = true }
